# voice_mcp

./: README.md  pyproject.toml
src/mcp_server_tts/: __init__.py  __main__.py  server.py
